@@ -1,3 +1,8 @@
+2003-04-28: cvs - Hin-Tak Leung
+   * Changed "--with-kerneldevice" to "--with-kernelusb" for configure. 
+   . Also changed all "HAVE_KERNEL_DEVICE" to "HAVE_KERNEL_USB_DEVICE" 
+        internally.
+
 2003-04-27: cvs - Roberto Ragusa
    . New options added to foomatic and ps2epl.
    . Misc little fixes.
